--- a/index.html
+++ b/index.html
@@ -4,9 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Totie's Fan Page</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="shortcut icon" href="./icon.png">
 </head>
 <body>
-    
+    <div class="hero">
+            <div class="header">
+                <div class="logo">Header Logo</div>
+                <ul class="header-links">
+                    <li><a href="google.com">Breakfast</a></li>
+                    <li><a href="google.com">Lunch</a></li>
+                    <li><a href="google.com">Dinner</a></li>
+                </ul>
+            </div>
+
+        <div class="top">
+            <div class="container">
+                <div class="hero-main">I want to eat hamburger</div>
+                <div class="hero-secondary">This website was made while I was hungry. Do not make a hamburger website under these conditions. I really wish I was eating a hamburger right now.</div>
+                <div class="buttons"><button class="sign-up">Sign Up</button></div>
+            </div>        
+            <img src="./top-image.jpg" alt="hamburger" width="600px">
+        </div>
+    </div>
+
+    <div class="info">
+        <div class="title">Check out these hamburgers!</div>
+        <div class="container">
+            <div class="item">
+                <img src="./hamburger1.jpg" alt="hamburger">
+                <div class="text">This is a delicious hamburger</div>
+            </div>
+            <div class="item">
+                <img src="./hamburger2.jpg" alt="hamburger">
+                <div class="text">Here is a hamburger with some sides too</div>
+            </div>
+            <div class="item">
+                <img src="./hamburger3.jpg" alt="hamburger">
+                <div class="text">Oh my, it's three wonderful looking hamburgers!</div>
+            </div>
+            <div class="item">
+                <img src="./hamburger4.jpg" alt="hamburger">
+                <div class="text">Two lovely little hamburgers with jalapenos and pickles</div>
+            </div>
+        </div>
+    </div>
+
+    <div class="quote">
+        <div class="text">The humble hamburger is the greatest food item I have bestowed upon you, my children. When thou'st hungry, feast upon thine ham and weep, for mine own son gave his life so that you may sup on the divine sandwich.</div>
+    </div>
+
+   
 </body>
 </html>
