finished landing page

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="header">
                 <div class="logo">Header Logo</div>
                 <ul class="header-links">
-                    <li><a href="google.com">Breakfast</a></li>
-                    <li><a href="google.com">Lunch</a></li>
-                    <li><a href="google.com">Dinner</a></li>
+                    <li><a href="http://www.google.com">Breakfast</a></li>
+                    <li><a href="http://www.google.com">Lunch</a></li>
+                    <li><a href="http://www.google.com">Dinner</a></li>
                 </ul>
             </div>
 
@@ -23,7 +23,7 @@
             <div class="container">
                 <div class="hero-main">I want to eat hamburger</div>
                 <div class="hero-secondary">This website was made while I was hungry. Do not make a hamburger website under these conditions. I really wish I was eating a hamburger right now.</div>
-                <div class="buttons"><button class="sign-up">Sign Up</button></div>
+                <div class="buttons"><button class="sign-up"><a href="http://www.google.com">Sign Up</a></button></div>
             </div>        
             <img src="./top-image.jpg" alt="hamburger" width="600px">
         </div>
@@ -52,8 +52,24 @@
     </div>
 
     <div class="quote">
+        <div class="container">
         <div class="text">The humble hamburger is the greatest food item I have bestowed upon you, my children. When thou'st hungry, feast upon thine ham and weep, for mine own son gave his life so that you may sup on the divine sandwich.</div>
+        <div class="credit">-Ronald McDonald</div>
     </div>
+    </div>
+
+    <div class="call">
+        <div class="container">
+            <div class="title">Call to action. It's time to ham now!</div>
+            <div class="text">Sign up to think about hamburgers, immediately. Click this button!</div>
+        </div>
+        <button><a href="http://www.google.com">Sign up</a></button>
+    </div>
+
+    <div class="footer">
+        Copyright &copy; Totie Industries 2021
+    </div>
+
 
    
 </body>
