--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="hero">
             <div class="header">
-                <div class="logo">Header Logo</div>
+                <div class="logo"><img src="./header.jpg"></div>
                 <ul class="header-links">
                     <li><a href="http://www.google.com">Breakfast</a></li>
                     <li><a href="http://www.google.com">Lunch</a></li>
@@ -53,7 +53,7 @@
 
     <div class="quote">
         <div class="container">
-        <div class="text">The humble hamburger is the greatest food item I have bestowed upon you, my children. When thou'st hungry, feast upon thine ham and weep, for mine own son gave his life so that you may sup on the divine sandwich.</div>
+        <div class="text">“Two all beef patties, special sauce, lettuce, cheese, pickles, onions, on a sesame-seed bun.”</div>
         <div class="credit">-Ronald McDonald</div>
     </div>
     </div>
